--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-
 }
 
 android {
@@ -72,8 +71,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation 'androidx.fragment:fragment-ktx:1.3.1'
     implementation 'androidx.activity:activity-ktx:1.3.1'
-
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.gms:play-services-base:18.1.0'
     implementation 'com.google.maps.android:android-maps-utils:0.6.2'
     implementation 'io.nlopez.smartlocation:library:3.3.3'
     implementation project(path: ':domain')
